// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Snapshots AgentLibrary Snapshots matches snapshot while loading 1`] = `
<div
  class="w-80 bg-bg-secondary border-r border-border p-4 space-y-4"
>
  <div
    class="space-y-2"
  >
    <div
      class="bg-border rounded animate-pulse h-8 w-32"
    />
    <div
      class="bg-border rounded animate-pulse h-10 w-full rounded"
    />
  </div>
  <div
    class="space-y-2"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="bg-border rounded animate-pulse w-4 h-4"
      />
      <div
        class="bg-border rounded animate-pulse h-5 w-24"
      />
      <div
        class="bg-border rounded animate-pulse w-6 h-4 rounded-full ml-auto"
      />
    </div>
    <div
      class="pl-6 space-y-2"
    >
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="space-y-2"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="bg-border rounded animate-pulse w-4 h-4"
      />
      <div
        class="bg-border rounded animate-pulse h-5 w-24"
      />
      <div
        class="bg-border rounded animate-pulse w-6 h-4 rounded-full ml-auto"
      />
    </div>
    <div
      class="pl-6 space-y-2"
    >
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="space-y-2"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="bg-border rounded animate-pulse w-4 h-4"
      />
      <div
        class="bg-border rounded animate-pulse h-5 w-24"
      />
      <div
        class="bg-border rounded animate-pulse w-6 h-4 rounded-full ml-auto"
      />
    </div>
    <div
      class="pl-6 space-y-2"
    >
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 p-2"
      >
        <div
          class="bg-border rounded animate-pulse w-8 h-8 rounded"
        />
        <div
          class="flex-1 space-y-1"
        >
          <div
            class="bg-border rounded animate-pulse h-3 w-32"
          />
          <div
            class="bg-border rounded animate-pulse h-2 w-24"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots AgentLibrary Snapshots matches snapshot with error state 1`] = `
<div
  class="fixed inset-0 bg-black/50 z-40 md:hidden transition-opacity duration-300 opacity-0 pointer-events-none"
/>
`;

exports[`Component Snapshots Node Component Snapshots ReviewNode matches snapshot in approved state 1`] = `
<div
  class="
        relative min-w-[250px] rounded-lg border-2 transition-all duration-200
        border-border-primary
        bg-bg-secondary hover:bg-bg-tertiary
      "
>
  <div
    class="!bg-accent-primary !w-3 !h-3 !border-2 !border-bg-primary"
    data-testid="react-flow-handle"
    position="left"
    type="target"
  />
  <div
    class="px-3 py-2 border-b border-border-primary rounded-t-md"
    style="background-color: rgba(16, 185, 129, 0.125);"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(16, 185, 129);"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <span
          class="text-xs font-medium text-text-secondary"
        >
          Approved
        </span>
      </div>
    </div>
  </div>
  <div
    class="px-3 py-2"
  >
    <h3
      class="text-sm font-semibold text-text-primary mb-1"
    >
      Review Node
    </h3>
    <div
      class="text-xs text-text-secondary mb-2"
    >
      Scope: 
      <span
        class="text-accent-primary capitalize"
      >
        changes
      </span>
    </div>
    <div
      class="flex items-center gap-3 mt-2 pt-2 border-t border-border-primary"
    >
      <div
        class="flex items-center gap-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square w-3 h-3 text-info"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
        </svg>
        <span
          class="text-xs text-text-secondary"
        >
          1
           comments
        </span>
      </div>
    </div>
  </div>
  <div
    class="!bg-accent-primary !w-3 !h-3 !border-2 !border-bg-primary"
    data-testid="react-flow-handle"
    position="right"
    type="source"
  />
</div>
`;

exports[`Component Snapshots Node Component Snapshots ReviewNode matches snapshot in pending state 1`] = `
<div
  class="
        relative min-w-[250px] rounded-lg border-2 transition-all duration-200
        border-border-primary
        bg-bg-secondary hover:bg-bg-tertiary
      "
>
  <div
    class="!bg-accent-primary !w-3 !h-3 !border-2 !border-bg-primary"
    data-testid="react-flow-handle"
    position="left"
    type="target"
  />
  <div
    class="px-3 py-2 border-b border-border-primary rounded-t-md"
    style="background-color: rgba(102, 102, 102, 0.125);"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(102, 102, 102);"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span
          class="text-xs font-medium text-text-secondary"
        >
          Pending Review
        </span>
      </div>
      <svg
        class="lucide lucide-circle-alert w-4 h-4 text-warning"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        title="Requires manual approval"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
    </div>
  </div>
  <div
    class="px-3 py-2"
  >
    <h3
      class="text-sm font-semibold text-text-primary mb-1"
    >
      Review Node
    </h3>
    <div
      class="text-xs text-text-secondary mb-2"
    >
      Scope: 
      <span
        class="text-accent-primary capitalize"
      >
        full
      </span>
    </div>
  </div>
  <div
    class="!bg-accent-primary !w-3 !h-3 !border-2 !border-bg-primary"
    data-testid="react-flow-handle"
    position="right"
    type="source"
  />
</div>
`;

exports[`Component Snapshots NodeEditModal Snapshots matches snapshot when closed 1`] = `null`;

exports[`Component Snapshots NodeEditModal Snapshots matches snapshot when open 1`] = `null`;
